<resources>
    <string name="app_name">AndroidTrackerClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string-array name="main_options">
        <item>Register</item>
        <item>GpsMain</item>
        
    </string-array>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="settings_screen_name">GPSLogger Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_write_to_file">Could not write to file</string>
    <string name="description_added">Description added to file</string>
    <string name="not_yet">Not Yet</string>
    <string name="cant_add_description_until_next_point">You can\'t add a description until the next point has been
        logged to a file.
    </string>
    <string name="add_description">Add a description</string>
    <string name="letters_numbers">Use only letters and numbers</string>
    <string name="menu_annotate">Annotate</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>
    <string name="txt_latitude">Latitude:</string>
    <string name="txt_longitude">Longitude:</string>
    <string name="txt_altitude">Altitude:</string>
    <string name="txt_speed">Speed:</string>
    <string name="txt_direction">Direction:</string>
    <string name="txt_satellites">Satellites:</string>
    <string name="txt_accuracy">Accuracy:</string>
    <string name="txt_travel_distance">Travelled:</string>
    <string name="btn_start_logging">Start Logging</string>
    <string name="btn_stop_logging">Stop Logging</string>
    <string name="gpslogger_still_running">GPSLogger is still running.</string>
    <string name="summary_loggingto">Logging to:</string>
    <string name="summary_loggingto_screen">screen only</string>
    <string name="summary_freq_every">Frequency:</string>
    <string name="summary_freq_max">maximum</string>
    <string name="summary_dist">Distance:</string>
    <string name="summary_dist_regardless">maximum</string>
    <string name="summary_current_filename">File:</string>
    <string name="summary_current_filename_format">%s (in your GPSLogger folder)</string>
    <string name="sharing_location_only">Location only</string>
    <string name="sharing_pick_file">Pick a file to share</string>
    <string name="sharing_mylocation">My location</string>
    <string name="sharing_googlemaps_link" formatted="false">http://maps.google.com/maps?q=%s,%s</string>
    <string name="sharing_via">Share via</string>
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="meter">&#160;meter</string>
    <string name="meters">&#160;meters</string>
    <string name="error">Error</string>
    <string name="error_connection">Connection Error. Please check your phone settings.</string>
    <string name="gpsprovider_unavailable">No GPS provider available. Please check your location settings and enable a
        location provider.
    </string>
    <string name="started">Started</string>
    <string name="providername_using">&#160;&#160;&#160;&#160;(Using %s)</string>
    <string name="providername_gps">GPS satellites</string>
    <string name="providername_celltower">cell towers</string>
    <string name="not_applicable">n/a</string>
    <string name="meters_per_second">&#160;m/s</string>
    <string name="feet_per_second">&#160;ft/s</string>
    <string name="miles_per_hour">&#160;mi/h</string>
    <string name="miles">&#160;mi</string>
    <string name="kilometers_per_hour">&#160;km/h</string>
    <string name="kilometers">&#160;km</string>
    <string name="unknown_direction">unknown</string>
    <string name="sorry">Sorry</string>
    <string name="success">Yay!</string>
    <string name="direction_roughly">Roughly %s</string>
    <string name="direction_north">North</string>
    <string name="direction_northnortheast">North by Northeast</string>
    <string name="direction_northeast">Northeast</string>
    <string name="direction_eastnortheast">East by Northeast</string>
    <string name="direction_east">East</string>
    <string name="direction_eastsoutheast">East by Southeast</string>
    <string name="direction_southeast">Southeast</string>
    <string name="direction_southsoutheast">South by Southeast</string>
    <string name="direction_south">South</string>
    <string name="direction_southsouthwest">South by Southwest</string>
    <string name="direction_southwest">Southwest</string>
    <string name="direction_westsouthwest">West by Southwest</string>
    <string name="direction_west">West</string>
    <string name="direction_westnorthwest">West by Northwest</string>
    <string name="direction_northwest">Northwest</string>
    <string name="direction_northnorthwest">North by Northwest</string>
    <string name="time_onesecond">1 second</string>
    <string name="time_halfminute">&#189; minute</string>
    <string name="time_oneminute">1 minute</string>
    <string name="time_onehour">1 hour</string>
    <string name="time_quarterhour">15 minutes</string>
    <string name="time_halfhour">&#189; hour</string>
    <string name="time_oneandhalfhours">1&#189; hours</string>
    <string name="time_twoandhalfhours">2&#189; hours</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false">within %s %s</string>
    <string name="error_displaying">Error in displaying location info: %s</string>
    <string name="degree_symbol">&#176;</string>
    <string name="settings_distance_in_feet">Distance in feet</string>
    <string name="settings_enter_feet">Enter feet(max 9999)</string>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="settings_enter_meters">Enter meters(max 9999)</string>
    <string name="settings_converting_title">Converting…</string>
    <string name="settings_converting_description">Converting minimum distance units. Values above 9999 are reset to
        9999. The settings screen will now reload.
    </string>
    <string name="pref_logging_title">Logging details</string>
    <string name="log_gpx_title">Log to GPX</string>
    <string name="log_gpx_summary">Creates a GPX file in the GPSLogger folder on the SD card.</string>
    <string name="log_kml_title">Log to KML</string>
    <string name="log_kml_summary">Creates a KML file in the GPSLogger folder on the SD card.</string>
    <string name="log_plain_text_title">Log to Plain Text</string>
    <string name="log_plain_text_summary">Creates a plain text file in the GPSLogger folder on the SD card.</string>
    <string name="satellite_time_title">Use satellite time</string>
    <string name="satellite_time_summary">Use satellite time instead of local phone time, it\'s more accurate.</string>
    <string name="new_file_creation_title">New file creation</string>
    <string name="new_file_creation_summary">Whether to create a new file once a day or each time you start.</string>
    <string name="new_file_creation_onceaday">Once a day</string>
    <string name="new_file_creation_everystart">Every time I start</string>
    <string name="pref_performance_title">Performance</string>
    <string name="prefer_celltower_title">Prefer celltowers</string>
    <string name="prefer_celltower_summary">Uses celltowers rather than satellites. Less accurate, but saves more
        battery.
    </string>
    <string name="time_before_logging_title">Time before logging</string>
    <string name="time_before_logging_summary">Use 0 for maximum frequency, but slower is better for battery life.
    </string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="time_before_logging_hint">Enter seconds (max 9999)</string>
    <string name="distance_before_logging_title">Distance before logging</string>
    <string name="distance_before_logging_summary">How far to travel before logging the next point. Use 0 to log all
        points.
    </string>
    <string name="useimperial_title">Use Imperial units</string>
    <string name="useimperial_summary">Use feet, miles and pints, none of that newfangled metric stuff.</string>
    <string name="show_notification_title">Show Notification</string>
    <string name="show_notification_summary">Displays a reminder along with coordinates in the notification bar.
    </string>
    <string name="enabledisablegps_title">Enable/Disable GPS</string>
    <string name="enabledisablegps_summary">Go to the phone settings to enable or disable the providers.</string>
    <string name="startonbootup_title">Start on bootup</string>
    <string name="startonbootup_summary">Launch app and start logging when phone starts</string>
    <string name="autoemail_title">Auto Email Setup</string>
    <string name="autoemail_summary">Automatically emails the log file to an address of your choice</string>
    <string name="please_wait">Please wait.</string>
    <string name="autoemail_autosend">Enable emails</string>
    <string name="autoemail_autosend_summary">Enables sending the log file to an email address of your choosing.
    </string>
    <string name="autoemail_target">Target email addresses</string>
    <string name="autoemail_frequency_whenistop">When I press stop</string>
    <string name="autoemail_frequency_8">After 8 hours</string>
    <string name="autoemail_frequency_6">After 6 hours</string>
    <string name="autoemail_frequency_5">After 5 hours</string>
    <string name="autoemail_frequency_4">After 4 hours</string>
    <string name="autoemail_frequency_3">After 3 hours</string>
    <string name="autoemail_frequency_2">After 2 hours</string>
    <string name="autoemail_frequency_1">After 1 hour</string>
    <string name="autoemail_frequency_05">After 0.5 hour</string>
    <string name="autoemail_frequency_008">After 5 minutes</string>
    <string name="autoemail_smtp_category">Email Settings</string>
    <string name="autoemail_username">Username</string>
    <string name="autoemail_username_summary">Username with your email provider</string>
    <string name="autoemail_password">Password</string>
    <string name="autoemail_password_summary">Password with your email provider</string>
    <string name="autoemail_port">Port</string>
    <string name="autoemail_port_summary">SMTP Port</string>
    <string name="autoemail_ssl">Use SSL?</string>
    <string name="autoemail_ssl_summary">Try toggling this if you cannot connect</string>
    <string name="autoemail_server">SMTP Server</string>
    <string name="autoemail_server_summary">Hostname of the SMTP server to use</string>
    <string name="autoemail_choosepreset">Mail Provider</string>
    <string name="autoemail_choosepreset_summary">Pick a provider or choose manual</string>
    <string name="autoemail_smtp_testemail">Test email</string>
    <string name="pref_logging_summary">Time, distance, file creation</string>
    <string name="pref_general_title">General Options</string>
    <string name="pref_general_summary">Startup and display options</string>
    <string name="autosend_enabled">Allow auto sending</string>
    <string name="autosend_enabled_summary">Allows sending the files to various targets</string>
    <string name="autosend_frequency_summary">How frequently log files should be sent</string>
    <string name="autosend_frequency">How often?</string>
    <string name="autosend_sendzip_title">Send zip file</string>
    <string name="autosend_sendzip_summary">Send zip file where applicable. Disable to send individual files, or if the zip option is not
        working for you
    </string>
    <string name="pref_autosend_title">Auto send, email and upload</string>
    <string name="pref_autosend_summary">Email, share and upload options</string>
</resources>