<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="gpslogger_preferences">

    <CheckBoxPreference android:key="log_gpx"
                        android:title="@string/log_gpx_title" android:summary="@string/log_gpx_summary"/>

   

    <PreferenceScreen android:title="@string/pref_logging_title"
                      android:summary="@string/pref_logging_summary">
        <PreferenceCategory android:title="@string/pref_logging_title">


            <CheckBoxPreference android:key="satellite_time"
                                android:summary="@string/satellite_time_summary"
                                android:title="@string/satellite_time_title"
                                android:defaultValue="false"/>
            <ListPreference android:key="new_file_creation"
                            android:title="@string/new_file_creation_title"
                            android:summary="@string/new_file_creation_summary"
                            android:entries="@array/filecreation_entries" android:defaultValue="onceaday"
                            android:entryValues="@array/filecreation_values"/>
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_performance_title">
            <CheckBoxPreference android:key="prefer_celltower"
                                android:summary="@string/prefer_celltower_summary"
                                android:title="@string/prefer_celltower_title"/>

            <EditTextPreference android:key="time_before_logging"
                                android:title="@string/time_before_logging_title"
                                android:summary="@string/time_before_logging_summary"
                                android:dialogTitle="@string/time_before_logging_dialog_title"
                                android:numeric="integer" android:maxLength="4"
                                android:hint="@string/time_before_logging_hint"/>


            <EditTextPreference android:key="distance_before_logging"
                                android:title="@string/distance_before_logging_title"
                                android:summary="@string/distance_before_logging_summary"
                                android:dialogTitle="@string/settings_distance_in_meters"
                                android:numeric="integer" android:maxLength="4"
                                android:hint="@string/settings_enter_meters"/>


        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_general_title" android:summary="@string/pref_general_summary">

        <CheckBoxPreference android:key="show_notification"
                            android:summary="@string/show_notification_summary"
                            android:title="@string/show_notification_title"
                            android:defaultValue="true"/>
        <CheckBoxPreference android:title="@string/startonbootup_title"
                            android:summary="@string/startonbootup_summary" android:key="startonbootup"/>
       
        <Preference android:title="@string/enabledisablegps_title"
                    android:summary="@string/enabledisablegps_summary" android:key="enableDisableGps"
                    android:defaultValue="false"/>

       

    </PreferenceScreen>
    <PreferenceScreen android:key="autosend_preferencescreen" android:title="@string/pref_autosend_title" android:summary="@string/pref_autosend_summary">

        <CheckBoxPreference android:key="autosend_enabled"
                            android:title="@string/autosend_enabled"
                            android:summary="@string/autosend_enabled_summary" />


        <ListPreference android:key="autosend_frequency"
                        android:title="@string/autosend_frequency"
                        android:summary="@string/autosend_frequency_summary"
                        android:entries="@array/autosend_frequencies" android:defaultValue="0"
                        android:entryValues="@array/autosend_values"/>

        <CheckBoxPreference android:key="autosend_sendzip" android:defaultValue="true"
                            android:title="@string/autosend_sendzip_title"
                            android:summary="@string/autosend_sendzip_summary"/>

      
        <PreferenceCategory android:title="@string/autoupload_targets_category">
            <Preference android:title="@string/autoupload_title"
                        android:summary="@string/autoupload_summary" android:key="autoupload_setup">
                <intent android:action="at.ac.tuwien.tracker.android.AUTOUPLOAD_SETUP"/>
            </Preference>

        </PreferenceCategory>


    </PreferenceScreen>


</PreferenceScreen>
